Wire gauge selection, ring recreation

--- a/emaille/war/style/index.css
+++ b/emaille/war/style/index.css
@@ -3,11 +3,13 @@
 canvas {
 	display: block;
 	float: left;
+	width: 78%;
 }
 
 div#control-panel {
 	float: left;
-	margin: 20px;
+	margin: 1%;
+	width: 18%;
 }
 
 div#control-panel * {
