--- a/emaille/war/style/index.css
+++ b/emaille/war/style/index.css
@@ -13,6 +13,7 @@ div#control-panel * {
 	margin-top: 2px;
 	margin-right: 2px;
 	margin-bottom: 2px;
+	vertical-align: middle;
 }
 
 div#control-panel .field-div {
@@ -24,6 +25,10 @@ div#control-panel .field-div label {
 	width: 25px;
 	display: inline-block;
 	padding-right: 5px;
+}
+
+.field-div output {
+	text-align: right;
 }
 
 div#top-control-div label{
@@ -53,4 +58,5 @@ button#move-button {
 div#footer {
 	clear: both;
 	font-size: 8pt;
+	padding-top: 80px;
 }
