--- a/emaille/war/style/index.css
+++ b/emaille/war/style/index.css
@@ -60,3 +60,29 @@ div#footer {
 	font-size: 8pt;
 	padding-top: 80px;
 }
+
+div#control-panel .slider-min, div#control-panel .slider-max {
+	font-size: 8pt;
+}
+
+div#control-panel .slider-min {
+	text-align: right;
+	width: 5%;
+	margin-right: 6px;
+}
+
+div#control-panel .slider-max {
+	width: 5%;
+	margin-left: 6px;
+}
+
+div#control-panel .slider-value {
+	font-size: 10pt;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
